Prevent overflow

--- a/index.css
+++ b/index.css
@@ -10,6 +10,7 @@
 body {
   background: var(--beige);
   padding-left: 7rem;
+  overflow: hidden;
 }
 
 .flex {
